# Scaffold-GS

./: .clang-format  .gitignore  convert.py  metrics.py  pyproject.toml  render.py  train.py
SIBR_viewers/: .gitignore  CMakeLists.txt  README.md
SIBR_viewers/cmake/linux/: dependencies.cmake
SIBR_viewers/cmake/windows/: dependencies.cmake
SIBR_viewers/docs/pages/Tutorials/How to setup your own project/: Configuring_your_project.dox
SIBR_viewers/src/: CMakeLists.txt
SIBR_viewers/src/core/assets/: ActiveImageFile.hpp  CMakeLists.txt  CameraRecorder.cpp  InputCamera.cpp  InputCamera.hpp  Resources.cpp  colmapheader.h
SIBR_viewers/src/core/graphics/: CMakeLists.txt  GUI.cpp  Image.hpp  Mesh.cpp
SIBR_viewers/src/core/imgproc/: CMakeLists.txt
SIBR_viewers/src/core/raycaster/: CMakeLists.txt  PlaneEstimator.cpp  VoxelGrid.hpp
SIBR_viewers/src/core/renderer/: CMakeLists.txt  CopyRenderer.hpp  RenderMaskHolder.cpp
SIBR_viewers/src/core/scene/: BasicIBRScene.cpp  BasicIBRScene.hpp  CMakeLists.txt  IProxyMesh.hpp  ProxyMesh.hpp
SIBR_viewers/src/core/system/: ByteStream.cpp  ByteStream.hpp  CMakeLists.txt  CommandLineArgs.hpp  Config.hpp  Utils.cpp  Utils.hpp  VectorUtils.hpp
SIBR_viewers/src/core/video/: CMakeLists.txt  Video.cpp  VideoUtils.cpp  VideoUtils.hpp
SIBR_viewers/src/core/view/: CMakeLists.txt  FPSCounter.hpp  ImagesGrid.cpp  InteractiveCameraHandler.cpp  MultiMeshManager.cpp  MultiMeshManager.hpp  MultiViewManager.cpp  MultiViewManager.hpp  SceneDebugView.cpp
SIBR_viewers/src/core/view/interface/: Interface.cpp  Interface.h  InterfaceUtils.h
SIBR_viewers/src/projects/basic/: CMakeLists.txt
SIBR_viewers/src/projects/basic/apps/: CMakeLists.txt
SIBR_viewers/src/projects/basic/apps/pointBased/: CMakeLists.txt
SIBR_viewers/src/projects/basic/apps/texturedMesh/: CMakeLists.txt
SIBR_viewers/src/projects/basic/renderer/: CMakeLists.txt
SIBR_viewers/src/projects/dataset_tools/preprocess/cropFromCenter/: main.cpp
SIBR_viewers/src/projects/gaussianviewer/: CMakeLists.txt
SIBR_viewers/src/projects/gaussianviewer/apps/: CMakeLists.txt
SIBR_viewers/src/projects/gaussianviewer/apps/gaussianViewer/: CMakeLists.txt  main.cpp
SIBR_viewers/src/projects/gaussianviewer/renderer/: CMakeLists.txt  GaussianSurfaceRenderer.hpp  GaussianView.cpp  GaussianView.hpp
SIBR_viewers/src/projects/remote/: CMakeLists.txt
SIBR_viewers/src/projects/remote/apps/: CMakeLists.txt
SIBR_viewers/src/projects/remote/apps/remoteGaussianUI/: CMakeLists.txt
SIBR_viewers/src/projects/remote/renderer/: CMakeLists.txt  RemotePointView.cpp
SIBR_viewers/src/projects/ulr/: CMakeLists.txt
SIBR_viewers/src/projects/ulr/apps/: CMakeLists.txt
SIBR_viewers/src/projects/ulr/apps/ulr/: CMakeLists.txt
SIBR_viewers/src/projects/ulr/apps/ulrv2/: CMakeLists.txt
SIBR_viewers/src/projects/ulr/renderer/: CMakeLists.txt
arguments/: __init__.py
gaussian_renderer/: __init__.py
lpips/: __init__.py  module.py  networks.py  utils.py
lpipsPyTorch/modules/: networks.py
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  embedding.py  gaussian_model.py
submodules/diff-gaussian-rasterization/: pyproject.toml
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
submodules/simple-knn/: CMakeLists.txt  ext.cpp  pyproject.toml  setup.py  spatial.cu
submodules/simple-knn/simple_knn/: __init__.py
utils/: camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  loss_utils.py  sh_utils.py  system_utils.py  visualize_utils.py
